site/public/css/forum.css
/* ... */
/* stylelint-disable-next-line selector-class-pattern */
.post_content pre {
    white-space: pre-wrap;
}
/* stylelint-disable-next-line selector-class-pattern */
.post_content p img {
    max-width: 100%;
}

/* stylelint-disable-next-line selector-class-pattern */
.post_content p:first-child {
    margin-top: 0;
}

/* stylelint-disable-next-line selector-class-pattern */
.post_content p:last-child {
    margin-bottom: 0;
}

.markdown-inactive {
    color: var(--standard-light-gray);
}

.markdown-active {
    color: var(--submitty-logo-blue);
}
/* stylelint-disable-next-line selector-id-pattern */

.filter-active,
.filter-active:hover {
    background: var(--actionable-blue);
    color: var(--always-default-white);
}

.filter-inactive {
    background: var(--always-default-white);
    color: var(--actionable-blue);
}

[data-theme="dark"] .filter-inactive {
    background: var(--btn-default-white);
    color: var(--default-black);
}

.thread-resolved {
    color: var(--good-green);
    margin-right: 0;
    font-size: 1.5em;
}

.thread-unresolved {
    color: var(--standard-tangerine-yellow);
    margin-right: 5px;
    font-size: 1.8em;
}

.category-sortable {
    background-color: var(--always-default-white);
}
/* stylelint-disable selector-class-pattern */
[data-theme="dark"] .post_box,
[data-theme="dark"] .create_thread_button,
[data-theme="dark"] .well {
    box-shadow: none;
}
/* stylelint-enable selector-class-pattern */
/* stylelint-disable-next-line selector-class-pattern */
[data-theme="dark"] .post_box:not(.important) {
    border: 1px solid var(--standard-light-medium-gray);
}

.thread-box-full {
    padding: 10px 20px;
    margin: 5px auto;
    border: 1px solid var(--standard-medium-gray);
}
/* stylelint-disable-next-line selector-class-pattern */
.thread_box .flex-row,
.thread-box-full .flex-row {
    display: flex;
    align-items: stretch;
    justify-content: flex-end;
}
/* stylelint-disable-next-line selector-class-pattern */
.content .thread_box_link {
    text-decoration: none;
    color: var(--text-black);
}

.thread-title-cont {
    flex: 3;
}

.thread-icons-cont {
    flex: 1;
    display: flex;
    flex-direction: row-reverse;
    align-items: flex-start;
    justify-content: flex-start;
    gap: 3px;
    max-width: 40%;
}

.thread-icons-cont.no-spacing {
    margin-top: 0;
}

.thread-icons-cont.has-spacing {
    margin-top: 2px;
}

.thread-icons-cont:empty {
    display: none;
}

.thread-info-container {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.thread-info-container.half-spacing {
    column-gap: 8px;
}

.thread-info-container.full-spacing {
    column-gap: 16px;
}

.sub-info-container {
    display: flex;
    flex-grow: 1;
    column-gap: 16px;
    justify-content: space-between;
    align-items: center;
}

.count-container {
    display: inline-flex;
    align-items: center;
    white-space: nowrap;
}

.thread-action-container {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    margin-left: auto;
}

.thread-date {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    font-size: smaller;
    font-weight: normal;
}

.thread-date.has-spacing {
    margin-top: 5px;
}

/* stylelint-disable-next-line selector-class-pattern */
.viewed_post {
    background-color: var(--default-white);
}

/* TODO: MAKE THIS CASCADE */
.deleted {
    background-color: var(--deleted-discussion-post-grey);
    color: var(--text-black);
}

.deleted-unviewed {
    /* stylelint-disable-next-line declaration-no-important */
    background-color: var(--deleted-and-unviewed-thread) !important;
    /* stylelint-disable-next-line declaration-no-important */
    color: var(--text-black) !important;
}

.deleted.active {
    background-color: var(--deleted-discussion-post-grey);
}

/* stylelint-disable-next-line selector-class-pattern */
.new_post {
    background-color: var(--viewed-content);
}

/* stylelint-disable selector-class-pattern */
.post_box.important.new_post,
.post_box.new_post.important-new {
    background-color: var(--viewed-content);
    border-style: solid;
    border-width: 4px;
    border-color: var(--important-post);
}
/* stylelint-enable selector-class-pattern */

.important {
    /* THIS IS WHERE THE BACKGROUND COLOR FOR POSTS IS */
    border-style: solid;
    border-width: 4px;
    border-color: var(--important-post); /* gold */
}

.active {
    background-color: var(--default-white);

    /*    color: #4a4a4a; */
    border: 4px solid var(--submitty-logo-blue);
}

/* stylelint-disable-next-line selector-class-pattern */
.new_thread {
    background-color: var(--viewed-content);
    color: var(--text-black);
}

.markdown-toggle {
    margin-right: 10px;
    padding: unset;
    cursor: pointer;
}

.button-row {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.liked-by-instructor {
    margin-left: 5px;
    font-size: 15px;
    vertical-align: middle;
    font-style: italic;
    color: var(--upduck-yellow);
    font-weight: bold;
    white-space: nowrap;
}

.pinned-thread {
    display: inline-block;
    padding: 5px;
    cursor: pointer;
}

.pinned-thread .fa-ellipsis-v {
    font-size: 1.2em;
    color: var(--standard-pale-gray);
}

.custom-dropdown-menu {
    background-color: var(--default-white);
    border: 1px solid var(--solution-text-background);
    border-radius: 4px; /* Rounded corners */
}

.custom-dropdown-menu a.dropdown-item {
    color: var(--standard-gray-black);
    display: block;
    font-size: 14px;
}

#search-clear {
    cursor: pointer;
}

.thread-content {
    word-break: break-word;
    overflow: hidden;
}

.post_content > div {
    flex-grow: 1;
    min-width: 0;
}

